--- a/recette.css
+++ b/recette.css
@@ -20,9 +20,8 @@ p.categorie {
 
 div.contenu{
     background-color: white;
-    margin: 60px 10% 80px 10%;
-    padding: 0px 30px 30px 30px;
-    min-width: 350px;
+    margin: 40px 8px 20px 10%;
+    padding: 0px 8px 20px 8px;
     box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1); 
     overflow: visible;
 }
@@ -70,18 +69,18 @@ table.info{
     width: 100%;
     color: white;
     background-color: #6C829DC0;
-    height: 80px;
+    height: 50px;
     
 }
 
 table.info td {
     text-align: center;
-    font-size: 14px;
+    font-size: 12px;
     vertical-align: top;
 }
 
 table.info th {
-    font-size: 16px;
+    font-size: 14px;
     vertical-align: bottom;
     padding-bottom: 8px;
 }
@@ -95,7 +94,7 @@ img.info{
 }
 
 div.colonne {
-    width: 45%;
+    width: 100%;
     margin-top: 20px;
 }
 
@@ -109,10 +108,6 @@ div.colonne h2 {
 
 div.colonne1 {
     display: inline-block;
-}
-
-div.colonne2 {
-    float: right;
 }
 
 div.ingredients p{
@@ -154,4 +149,47 @@ table.preparation tr {
 
 *{
     overflow: auto;
+}
+
+
+
+/* Styles pour ordinateur */
+
+@media only screen and (min-width: 768px) {
+    div.contenu{
+        min-width: 350px;
+        margin: 60px 10% 80px 10%;
+        padding: 0px 30px 30px 30px;
+    }
+
+    table.info{
+        height: 80px; 
+    }
+    
+    table.info td {
+        
+        font-size: 14px;
+    }
+    
+    table.info th {
+        font-size: 16px;
+    }
+
+    div.colonne {
+        width: 45%;
+        margin-top: 20px;
+    }
+    
+    div.colonne2 {
+        float: right;
+    }
+  }
+
+
+@media only screen and (min-width: 900px) {
+    div.contenu{
+        margin-left: auto;
+        margin-right: auto;
+       width: 645px;
+    }
 }
